# mc-pack-dev

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  babel.config.js  package.json  tsconfig.json
app/: .testcafe-electron-rc  Routes.tsx  app.global.scss  app.html  index.tsx  main.dev.ts  menu.ts  package.json  rootReducer.ts  store.ts
app/.erb/configs/: webpack.config.renderer.dev.ts
app/components/: Button.tsx  Home.css  Home.tsx  MessageBox.css  MessageBox.tsx  ModTable.css  ModTable.tsx  css.d.ts
app/containers/: App.tsx  CounterPage.tsx  HomePage.tsx  Root.tsx
app/minecraft/: apiwrap.ts  fabric.ts  forge.ts  launcher_profiles.ts  mod.ts  moddata.ts
app/src/main/: main.ts
app/src/minecraft/: apiwrap.ts  fabric.ts  forge.ts  launcher_profiles.ts  moddata.ts
app/src/minecraft/cursforgeapi/: curseforge.js
app/src/minecraft/cursforgeapi/objects/: Files.js  Mod.js
app/src/renderer/: Button.tsx  Home.tsx  MessageBox.jsx  MessageBox.module.css  MessageBox.tsx  ModTable.module.css  ModTable.tsx  app.global.css  index.ejs  index.tsx
configs/: webpack.config.base.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.dev.dll.babel.js  webpack.config.renderer.prod.babel.js
internals/scripts/: BabelRegister.js  CheckBuildsExist.js  CheckNativeDep.js  CheckYarn.js
updater_light/: CMakeLists.txt
updater_light/main/: CMakeLists.txt
updater_light/main/src/: config.cpp  config.hpp  main.cpp  update_client.cpp  update_client.hpp
updater_server/: CMakeLists.txt
updater_server/main/: CMakeLists.txt
updater_server/main/include/updater_server/: sha256.hpp
updater_server/main/src/: main.cpp  minecraft.cpp  minecraft.hpp  sha256.hpp  temp_file.hpp  update_agent.cpp  update_agent.hpp
updater_server/main/src/routers/: router_base.hpp  update_api.cpp  update_api.hpp
updater_ui/: package.json
updater_ui/src/main/: local_client.js  main.ts  preload.js
updater_ui/src/renderer/: app.global.css  app.tsx  global.d.ts  update_client.ts
updater_ui/src/renderer/main_window/: main_window.tsx
